<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_schedule"
        android:icon="@drawable/ic_bottom_schedule"
        android:orderInCategory="0"
        android:title="@string/schedule"/>

    <item
        android:id="@+id/menu_question"
        android:icon="@drawable/ic_bottom_question"
        android:orderInCategory="1"
        android:title="@string/question"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_bottom_search"
        android:orderInCategory="2"
        android:title="@string/search"/>

    <item
        android:id="@+id/menu_my"
        android:icon="@drawable/ic_bottom_my"
        android:orderInCategory="3"
        android:title="@string/my"/>
</menu>
