<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hosigus.askposts.ui.activity.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_gradient"
        app:layout_constraintBottom_toTopOf="@id/line1"/>

    <android.support.constraint.Guideline
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title=""
        app:navigationIcon="@drawable/ic_back"
        android:background="@drawable/shape_gradient"
        android:fitsSystemWindows="true">
        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:text="@string/login"/>
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18"/>

    <View
        android:id="@+id/v_logo"
        android:layout_width="@dimen/dp_108"
        android:layout_height="@dimen/dp_108"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline58" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24"
        android:background="@color/pure_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="@dimen/dp_16"
                android:drawableStart="@drawable/ic_login_user"
                android:textColorHint="@color/pure_gray"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="10"
                android:hint="@string/hint_user"/>

            <include layout="@layout/include_line" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="@dimen/dp_16"
                android:drawableStart="@drawable/ic_login_password"
                android:textColorHint="@color/pure_gray"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:inputType="numberPassword"
                android:singleLine="true"
                android:maxLength="6"
                android:hint="@string/hint_pwd"/>

            <include layout="@layout/include_line" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_gradient"
                android:textColorHint="@color/pure_white"
                android:textSize="@dimen/sp_16"
                android:hint="@string/hint_login"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
